--- a/src/Components/NoteForm/noteForm.css
+++ b/src/Components/NoteForm/noteForm.css
@@ -1,10 +1,21 @@
-.note {
-    border: 1px solid #ccc;
-    max-width: 350px;
-    margin: 20px auto;
-    padding: 20px;
+.note-form {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgb(110, 102, 102);
+    padding: 10px 20px;
+    text-align: center;
 }
+.note-form__title, 
+.note-form__content {
+    padding: 5px 3px;
+    margin-right: 5px;
+ }
 
-.note h1 {
-    margin-top: 0;
-}
+ .note-form__bttn {
+     background-color: #fff;
+     border: 1px solid #000;
+     padding: 5px 10px;
+ }
