--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
 .app {
-  padding-top: 60px;
+
+}
+
+.note-list {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: 0 auto;
+}
+
+
+.load-notes {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 10px;
+  width: 80px;
+  height: 80px;
+  border: none;
+  text-align: center;
+  background: red;
+  border-radius: 500%;
+  color: white;
 }
