--- a/src/Components/Common/Header/header.css
+++ b/src/Components/Common/Header/header.css
@@ -1,5 +1,7 @@
 .header {
-    padding: 20px;
+    padding: 5px 20px;
     background: cadetblue;
     color: azure;
+    text-align: center;
+    margin-bottom: 1em;
 }
